# bgmtool

./: Cargo.toml  todo.txt
mamar/: Cargo.toml
mamar/src/: icon.rs  main.rs  support.rs  ui.rs
mamar/src/ui/: app.rs
